--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,31 @@
     <packaging>jar</packaging>
 
     <name>basic_stats</name>
+    <description>Basic Stats, by mooreb.</description>
     <url>https://mooreb.com/</url>
 
+    <licenses>
+      <license>
+        <name>MIT License</name>
+        <url>http://www.opensource.org/licenses/mit-license.php</url>
+      </license>
+    </licenses>
+
+    <developers>
+       <developer>
+         <name>Brian Moore</name>
+         <email>mooreb@mooreb.com</email>
+         <organization>mooreb.com</organization>
+         <organizationUrl>https://mooreb.com</organizationUrl>
+       </developer>
+    </developers>
+
+    <scm>
+      <connection>scm:git:git://github.com/mooreb/basic_stats.git</connection>
+      <developerConnection>scm:git:ssh://github.com:mooreb/basic_stats.git</developerConnection>
+      <url>http://github.com/mooreb/basic_stats/tree/master</url>
+    </scm>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
